[package]
name = "spinning-square"
version = "0.1.0"
authors = ["Emil <emil.sivervik@kit.se>"]
edition = "2018"

[[bin]]
name = "spinning-square"

[dependencies] 
piston_window = "0.101.0"
pistoncore-sdl2_window = "0.63.0"
libmath = "0.2.1"
lazy_static = "1.3.0"
find_folder = "0.3.0"

[dependencies.piston2d-graphics]
version = "0.32.0"
features = ["glyph_cache_rusttype"]